--- a/_includes/js.html
+++ b/_includes/js.html
@@ -6,12 +6,12 @@
 <script src="/js/custom.js"></script>
 <script>$(prettyPrint);</script>
 <script>
-    var disqus_shortname = 'ocramius-dev';
+    var disqus_shortname = 'hounddog-dev';
     var disqus_identifier = '{{page.url}}';
-    var disqus_url = 'http://ocramius.github.com/{{page.url}}';
+    var disqus_url = 'http://hounddog.github.com/{{page.url}}';
 </script>
-<script src="http://ocramius-dev.disqus.com/count.js"></script>
-<script src="http://ocramius-dev.disqus.com/embed.js"></script>
+<script src="http://hounddog-dev.disqus.com/count.js"></script>
+<script src="http://hounddog-dev.disqus.com/embed.js"></script>
 <script src="http://platform.twitter.com/widgets.js"></script>
 <script src="https://apis.google.com/js/plusone.js"></script>
 <script src="/js/analytics.js"></script>
