--- a/_includes/post_share_row.html
+++ b/_includes/post_share_row.html
@@ -1,6 +1,6 @@
 <div class="row well">
     <iframe
-        src="http://ghbtns.com/github-btn.html?user=Ocramius&type=follow&count=true"
+        src="http://ghbtns.com/github-btn.html?user=Hounddog&type=follow&count=true"
         allowtransparency="true"
         frameborder="0"
         scrolling="0"
@@ -8,16 +8,16 @@
         height="20px"
     ></iframe>
     <iframe
-        src="http://ghbtns.com/github-btn.html?user=Ocramius&repo=ocramius.github.com&type=watch&count=true"
+        src="http://ghbtns.com/github-btn.html?user=Hounddog&repo=hounddog.github.com&type=watch&count=true"
         allowtransparency="true"
         frameborder="0"
         scrolling="0"
         width="105px"
         height="20px"
     ></iframe>
-    <a href="https://twitter.com/share" class="twitter-share-button" data-via="ocramius">Tweet</a>
-    <a href="https://twitter.com/ocramius" class="twitter-follow-button btn btn-mini" data-show-count="false">
-        Follow @ocramius
+    <a href="https://twitter.com/share" class="twitter-share-button" data-via="mshwalbe">Tweet</a>
+    <a href="https://twitter.com/mshwalbe" class="twitter-follow-button btn btn-mini" data-show-count="false">
+        Follow @mshwalbe
     </a>
     <g:plusone size="medium"></g:plusone>
 </div>
