--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -6,7 +6,7 @@
                 {{ page.date | date: "%B %e, %Y" }}
                 <small>
                     . {{ page.category }} .
-                    <a href="http://ocramius.github.com{{ page.url }}#disqus_thread" data-disqus-identifier="{{ page.url }}">Comments</a>
+                    <a href="http://hounddog.github.com{{ page.url }}#disqus_thread" data-disqus-identifier="{{ page.url }}">Comments</a>
                 </small>
             </strong>
             <br/>
@@ -33,10 +33,10 @@
             {% endif %}
         </p>
         <p>
-            <a class="btn btn-mini btn-warning" href="https://github.com/Ocramius/ocramius.github.com/issues/new" target="_blank">
+            <a class="btn btn-mini btn-warning" href="https://github.com/Hounddog/hounddog.github.com/issues/new" target="_blank">
                 Report an issue
             </a>
-            <a class="btn btn-mini btn-success" href="https://github.com/Ocramius/ocramius.github.com/fork_select" target="_blank">
+            <a class="btn btn-mini btn-success" href="https://github.com/Hounddog/hounddog.github.com/fork_select" target="_blank">
                 Fork and help me
             </a>
         </p>
