--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,10 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="description" content="{{ page.description }}"/>
-        <meta name="author" content="Marco Pivetta"/>
+        <meta name="author" content="Martin Shwalbe"/>
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/css/bootstrap-combined.min.css" rel="stylesheet"/>
         <link href="/js/google-code-prettify/prettify.css" rel="stylesheet"/>
         <link href="/css/style.css" rel="stylesheet"/>
-        <link rel="shortcut icon" href="/marco-pivetta-ocramius.gif"/>
     </head>
     <body data-spy="scroll" data-target=".subnav" data-offset="50">
         {% include navigation.html %}
