--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -25,6 +25,10 @@
                         <a href="http://www.twitter.com/mshwalbe" title="Martin Shwalbe's Twitter profile" target="_blank">Twitter</a>
                     </li>
                     <li class="divider-vertical"></li>
+                    <li class="">
+                        <a href="/resume" title="Martin Shwalbe's Resume">Resume</a>
+                    </li>
+                    <li class="divider-vertical"></li>
                 </ul>
             </div>
         </div>
