--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -9,6 +9,7 @@
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/css/bootstrap-combined.min.css" rel="stylesheet"/>
         <link href="/js/google-code-prettify/prettify.css" rel="stylesheet"/>
         <link href="/css/style.css" rel="stylesheet"/>
+	<link href="/css/docs.css" rel="stylesheet"/>        
     </head>
     <body data-spy="scroll" data-target=".subnav" data-offset="50">
         {% include navigation.html %}
