--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-	<p>Generated on {{ site.time | date: "%B %e, %Y" }}</p>
+	<p style="text-align:center">{{ page.title }} updated on {{ site.time | date: "%B %e, %Y" }}</p>
 </footer>
