--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -9,13 +9,14 @@
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/css/bootstrap-combined.min.css" rel="stylesheet"/>
         <link href="/js/google-code-prettify/prettify.css" rel="stylesheet"/>
         <link href="/css/style.css" rel="stylesheet"/>
-	   <link href="/css/docs.css" rel="stylesheet"/>
+	    <link href="/css/docs.css" rel="stylesheet"/>
+        <link href="/css/resume.css" rel="stylesheet"/>
     </head>
     <body data-spy="scroll" data-target=".subnav" data-offset="50">
         {% include navigation.html %}
 
         <div class="container">
-            <div class="marketing">
+            <div class="resume">
                 {{ content }}
             </div>
 
