--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -31,9 +31,8 @@
                                 also my hobby, and all I do is on <a href="https://github.com/Hounddog/"  target="_blank">
                                 my Github page</a>.
                             </p>
-                            <br/>
 
-                            <p>
+                            <p style="clear: both">
                                 <a href="https://twitter.com/mshwalbe" class="twitter-follow-button btn btn-mini" data-show-count="false">
                                     Follow @mshwalbe
                                 </a>
