--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta name="description" content="{{ page.description }}"/>
+        <meta name="description" content="{{ page.summary }}"/>
         <meta name="author" content="Martin Shwalbe"/>
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/css/bootstrap-combined.min.css" rel="stylesheet"/>
         <link href="/js/google-code-prettify/prettify.css" rel="stylesheet"/>
