--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
         <meta name="description" content="{{ page.summary }}"/>
         <meta name="author" content="Martin Shwalbe"/>
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/css/bootstrap-combined.min.css" rel="stylesheet"/>
-        <link href="/js/google-code-prettify/prettify.css" rel="stylesheet"/>
+        <link href="/js/google-code-prettify/sunburst.css" type="text/css" rel="stylesheet" />
         <link href="/css/style.css" rel="stylesheet"/>
 	   <link href="/css/docs.css" rel="stylesheet"/>
     </head>
