--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -9,6 +9,7 @@
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/css/bootstrap-combined.min.css" rel="stylesheet"/>
         <link href="/css/style.css" rel="stylesheet"/>
 	<link href="/css/docs.css" rel="stylesheet"/>
+    <link href="/feed/feed.rss" rel="alternate" type="application/rss+xml" title="Blog Feed" />
     </head>
     <body data-spy="scroll" data-target=".subnav" data-offset="50">
         {% include navigation.html %}
